# Split_a_bill

./: .env  .env.example  .gitignore  BOT_FULL_DESCRIPTION.md  README.md  app.py  pyproject.toml  requirements.txt  vercel.json  wrangler.toml
api/: index.py
bot/: __init__.py  application.py  config.py  currency.py  db.py  logic.py  main.py  models.py  setup_webhook.py  webhook_app.py
bot/handlers/: __init__.py  callbacks.py  fallback.py  invite.py  ledger.py  remind.py  simple.py  start.py
bot/middlewares/: __init__.py  idempotency.py
bot/utils/: __init__.py  formatting.py  rate_limit.py
postgres/: schema.sql
postgres/migrations/: 20260306_payment_requests.sql
src/: entry.py
supabase/: schema.sql
supabase/migrations/: 20260305_multi_currency.sql
tests/: test_logic.py  test_simple_parsing.py  test_webhook_config.py
