[project]
name = "split-a-bill-worker"
version = "0.1.0"
description = "Split a Bill Telegram bot on Cloudflare Workers"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3,<4",
    "fastapi>=0.117,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1,<2",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]

[tool.uv]
package = false
